plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
    id 'org.jetbrains.kotlin.android'
}

android {
    compileSdkVersion 33
    useLibrary 'org.apache.http.legacy'

    defaultConfig {
        applicationId "nithra.tamil.word.game.solliadi"
        minSdkVersion 21
        targetSdkVersion 33
        versionCode 61
        versionName "6.9"
        multiDexEnabled true
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }
    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    lintOptions {
        abortOnError false
        checkReleaseBuilds false
    }
    dexOptions {
        maxProcessCount 4
        javaMaxHeapSize "4g"
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    namespace 'nithra.tamil.word.game.solliadi'


}

dependencies {
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'//change from 2.1.1
    testImplementation 'junit:junit:4.13.2'//change from 4.12
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    //noinspection GradleCompatible
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.8.0'
    implementation 'com.github.bumptech.glide:glide:4.15.1'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'com.google.firebase:firebase-config:21.2.1'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    implementation 'com.google.firebase:firebase-messaging:23.1.2'
    implementation 'com.google.firebase:firebase-core:21.1.1'
    implementation 'com.android.billingclient:billing:5.1.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.android.volley:volley:1.2.1'
    implementation 'com.google.android.play:core:1.10.3'
    implementation 'com.google.firebase:firebase-inappmessaging-display:20.3.1'
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'// compulsory
    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
    implementation 'com.android.installreferrer:installreferrer:2.2'
    implementation 'com.google.android.gms:play-services-ads:21.5.0'
    implementation 'com.airbnb.android:lottie:6.0.0'


    //applovin
    implementation 'com.applovin:applovin-sdk:11.8.2'
    implementation 'com.applovin.mediation:facebook-adapter:6.13.7.0'

}

